Attempt #1 at fixing transparency of boxes on mobile

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -233,6 +233,10 @@ input[type=text] {
   box-sizing: border-box;
 }
 
+select {
+  opacity: 1;
+}
+
 select.form-control.select.optional {
   height: 40px;
   border: 1px solid #ccc;
